nixos/_mixins/k3s/manifests/flux.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
---
