nixos/_mixins/k3s/manifests/default.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: cloudflared
  labels:
    app: cloudflared
spec:
  selector:
    matchLabels:
      app: cloudflared
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
        - image: cloudflare/cloudflared:2026.3.0 #{"$imagescan": "cloudflared-scan"}
          name: cloudflared
          command: ["cloudflared", "tunnel", "--no-autoupdate", "run"]
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-header
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cloudflare-rewrite
  namespace: kube-system
spec:
  plugin:
    cloudflarewarp:
      disableDefault: false
      trustip: # Trust IPS not required if disableDefault is false - we will allocate Cloud Flare IPs automatically
        - "10.42.0.0/24"
        - "10.42.1.0/24"
        - "10.42.2.0/24"
